# autodownloader

./: Dockerfile  Makefile  README.md  __main__.py  docker-compose.yml  pyproject.toml  requirements.txt
nextcloud-deck-movies-piratebay-downloader/: __main__.py
